# Open-Source-Astrodynamic-Mission-Planner

./: .gitignore  README.md  pixi.toml  pyproject.toml
.claude/: settings.local.json
backend/oamp/: __init__.py  bodies.py  frames.py  timescales.py  tle.py
backend/oamp/api/: main.py
backend/oamp/dynamics/: atmosphere.py  cr3bp.py  integrators.py  launch.py  newtonian.py  optimization.py  perturbations.py  transfers.py
backend/oamp/spice/: __init__.py  fetch_kernels.py  manifest.toml
backend/tests/: test_atmosphere.py  test_body_pole.py  test_cr3bp.py  test_ecef.py  test_frames.py  test_integrators.py  test_j2.py  test_launch.py  test_newtonian.py  test_optimization.py  test_perturbations.py  test_timescales.py  test_tle.py  test_transfers.py
data/kernels/: README.md
docs/: architecture.d2  roadmap_phase2_3.tex  roadmap_phase_plan.tex
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/data/: README.md
web/src/: api.js  api.ts  kepler.js  kepler.ts  main.js  main.ts
web/src/render/: earth-coastline.js  earth-coastline.ts  gmst.ts  mat4.js  mat4.ts  scene.js  scene.ts
