[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oamp"
version = "0.1.0"
description = "Open Source Astrodynamic Mission Planning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HortDog" }]

[tool.hatch.build.targets.wheel]
packages = ["backend/oamp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
